# bloaty-pgp

./: Cargo.toml  README.md
src/: lib.rs  main.rs  pgp.rs  utils.rs
src/parsers/: base64.rs  pgp_utils.rs  signature.rs  utils.rs
