[package]
name = "bloaty-pgp"
version = "0.1.0"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
assert_cmd = "1.0.1"
base64 = "0.13.0"
byteorder = "1.3.4"
clap = "2.33.3"
nom = "5.0.0"
num = "0.3.1"
regex = "1.5.5"
sha2 = "0.9.2"
